--- a/static/style.css
+++ b/static/style.css
@@ -48,13 +48,13 @@ body {
 }
 
 form {
-  background-color: white;
-  padding: 25px 30px;
-  max-width: 500px;
   width: 100%;
-  margin: auto;
-  border-radius: 12px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.15);
+  padding: 0;
+  margin: 0;
+  background: none;
+  border-radius: 0;
+  box-shadow: none;
+  box-sizing: border-box;
 }
 
 label {
